--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "next": "12.0.8",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
